@@ -6,14 +6,15 @@
 using namespace Rcpp;
 
 // anytime_cpp
-Rcpp::NumericVector anytime_cpp(SEXP x, const std::string& tz);
-RcppExport SEXP anytime_anytime_cpp(SEXP xSEXP, SEXP tzSEXP) {
+Rcpp::NumericVector anytime_cpp(SEXP x, const std::string& tz, const bool asUTC);
+RcppExport SEXP anytime_anytime_cpp(SEXP xSEXP, SEXP tzSEXP, SEXP asUTCSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< SEXP >::type x(xSEXP);
     Rcpp::traits::input_parameter< const std::string& >::type tz(tzSEXP);
-    rcpp_result_gen = Rcpp::wrap(anytime_cpp(x, tz));
+    Rcpp::traits::input_parameter< const bool >::type asUTC(asUTCSEXP);
+    rcpp_result_gen = Rcpp::wrap(anytime_cpp(x, tz, asUTC));
     return rcpp_result_gen;
 END_RCPP
 }
