@@ -146,9 +146,18 @@ double ptToDouble(const bt::ptime & pt) {
     return totsec - dstadj;
 }
 
+// given a ptime object, return (fractional) seconds since epoch -- at UTC
+double ptToDoubleUTC(const bt::ptime & pt) {
+    const bt::ptime timet_start(boost::gregorian::date(1970,1,1));
+    bt::time_duration tdiff = pt - timet_start;
+    double totsec = tdiff.total_microseconds()/1.0e6;
+    return totsec;
+}
+
+
 // given a string with a (date)time object, try all formats til we parse one
 // conversion of ptime object to double done by ptToDouble()
-double stringToTime(const std::string s) {
+double stringToTime(const std::string s, const bool asUTC=false) {
 
     bt::ptime pt, ptbase;
 
@@ -160,12 +169,18 @@ double stringToTime(const std::string s) {
         is >> pt;
     }
 
-    return (pt == ptbase) ? NAN : ptToDouble(pt);
+    if (pt == ptbase) return NA_REAL; // NA for non-parsed dates
+
+    if (asUTC)
+        return ptToDoubleUTC(pt);
+    else
+        return ptToDouble(pt);
 }
 
 template <class T, int RTYPE>
 Rcpp::NumericVector convertToTime(const Rcpp::Vector<RTYPE>& sxpvec,
-                                  const std::string& tz = "UTC") {
+                                  const std::string& tz = "UTC",
+                                  const bool asUTC = false) {
 
     // step one: create a results vector, and class it as POSIXct
     int n = sxpvec.size();
@@ -198,20 +213,22 @@ Rcpp::NumericVector convertToTime(const Rcpp::Vector<RTYPE>& sxpvec,
 
             // Given the string, convert to a POSIXct using an interim double
             // of fractional seconds since the epoch
-            pv[i] = stringToTime(s);
+            pv[i] = stringToTime(s, asUTC);
         }
     }
     return pv;
 }
 
 // [[Rcpp::export]]
-Rcpp::NumericVector anytime_cpp(SEXP x, const std::string& tz = "UTC") {
+Rcpp::NumericVector anytime_cpp(SEXP x,
+                                const std::string& tz = "UTC",
+                                const bool asUTC = false) {
 
     if (Rcpp::is<Rcpp::CharacterVector>(x)) {
-        return convertToTime<const char*, STRSXP>(x, tz);
+        return convertToTime<const char*, STRSXP>(x, tz, asUTC);
         
     } else if (Rcpp::is<Rcpp::IntegerVector>(x)) {
-        return convertToTime<int, INTSXP>(x, tz);
+        return convertToTime<int, INTSXP>(x, tz, asUTC);
 
     } else if (Rcpp::is<Rcpp::NumericVector>(x)) {
         // here we have two cases: either we are an int like
@@ -220,11 +237,11 @@ Rcpp::NumericVector anytime_cpp(SEXP x, const std::string& tz = "UTC") {
         Rcpp::NumericVector v(x);
         if (v[0] < 21990101) {  // somewhat arbitrary cuttoff
             // actual integer date notation: convert to string and parse
-            return convertToTime<double, REALSXP>(x, tz);
+            return convertToTime<double, REALSXP>(x, tz, asUTC);
         } else {
             // we think it is a numeric time, so treat it as one
             v.attr("class") = Rcpp::CharacterVector::create("POSIXct", "POSIXt");
-            v.attr("tzone") = tz;
+            v.attr("tzone") = asUTC ? "UTC" : tz;
             return v;
         }
         
